-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b69
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8098649 | emb-9 | Vladimir Ivanov | P3 | Resolved | Fixed | team |
Backout JDK-8059340: ConstantPool::_resolved_references is missing in heap dump.
The fix breaks JVMTI and there's no easy way to fix the problem.
The fix breaks JVMTI and there's no easy way to fix the problem.
- backported by
-
JDK-8098649 Backout JDK-8059340: ConstantPool::_resolved_references is missing in heap dump
-
- Resolved
-
- duplicates
-
JDK-8081004 vm/mlvm/indy/func/jvmti/mergeCP_indy2same_b fails with assert(resolved_references->obj_at(appendix_index) == __null) failed: init just once
-
- Closed
-
-
JDK-8081000 gc/metaspace/CompressedClassSpaceSizeInJmapHeap.java fails with RuntimeException: field "_resolved_references" not found in type ConstantPool
-
- Closed
-
- relates to
-
JDK-8059340 ConstantPool::_resolved_references is missing in heap dump
-
- Resolved
-