8081320: Backout JDK-8059340: ConstantPool::_resolved_references is missing in heap dump

Reviewed-by: sspitsyn, coleenp